--- a/templates/post.html
+++ b/templates/post.html
@@ -20,7 +20,9 @@
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-12 col-md-11 col-lg-9 col-xl-9">
-        {{ post.body|safe }}
+        <div class="post-body ck-content">
+          {{ post.body|safe }}
+        </div>
         {% if current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
           <a class="btn btn-primary float-right" href="{{ url_for('edit_post', post_id=post.id) }}">Edit Post</a>
