--- a/templates/footer.html
+++ b/templates/footer.html
@@ -2,17 +2,24 @@
   <div class="container px-4 px-lg-5">
     <div class="row gx-4 gx-lg-5 justify-content-center">
       <div class="col-md-10 col-lg-8 col-xl-7">
-        <ul class="list-inline text-center">
+        <ul class="list-inline text-center wf-socials">
           <li class="list-inline-item">
-            <a href="https://github.com/FurkanCLL" target="_blank">
-              <span class="fa-stack fa-lg">
-                <i class="fas fa-circle fa-stack-2x"></i>
-                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-              </span>
+            <a class="wf-social" href="#" aria-label="Instagram">
+              <i class="fab fa-instagram" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="wf-social" href="#" aria-label="TikTok">
+              <i class="fab fa-tiktok" aria-hidden="true"></i>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a class="wf-social" href="#" aria-label="YouTube">
+              <i class="fab fa-youtube" aria-hidden="true"></i>
             </a>
           </li>
         </ul>
-        <div class="small text-center text-muted fst-italic">© {{ current_year }} WonderFloyd</div>
+                <div class="small text-center text-muted fst-italic">© {{ current_year }} WonderFloyd</div>
       </div>
     </div>
   </div>
